--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,11 +1,11 @@
 :root {
   --ifm-color-primary: #BD2A2E;
-  --ifm-color-primary-dark: #B2BEBF;
-  --ifm-color-primary-darker: #486966;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary-dark: #3B3936;
+  --ifm-color-primary-darker: #B2BEBF;
+  --ifm-color-primary-darkest: #889C9B;
+  --ifm-color-primary-light: #486966;
+  --ifm-color-primary-lighter: #538b87;
+  --ifm-color-primary-lightest: #885943;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
