Alterar cor fundo

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,6 +7,7 @@
   --ifm-color-primary-lighter: #538b87;
   --ifm-color-primary-lightest: #885943;
   --ifm-code-font-size: 95%;
+  background-color: aquamarine;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
